# words

./: .env.example  .gitignore  .gitmodules  ANALYSIS_MANIFEST.txt  Backend Cascading Deletion Implementation Guide.md  COMPLEXITY_ANALYSIS.md  COMPLEXITY_EXAMPLES.md  COMPLEXITY_INDEX.md  COMPLEXITY_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  KISS_ANALYSIS_CACHING.md  KISS_ANALYSIS_README.md  KISS_ANALYSIS_SUMMARY.txt  KISS_VIOLATIONS_VISUAL.md  LICENSE  PERFORMANCE_AUDIT_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SIDEBAR_FIX_SUMMARY.md  TEXTURE_IMPLEMENTATION_PLAN.md  analyze_actual_tokens.py  backend_log.txt  batch_api_cost_analysis.py  claude.md  component-integration-analysis.md  comprehensive_performance_report.md  config.example.toml  dev.sh  docker-compose.notification.yml  docker-compose.prod-local.yml  docker-compose.prod.notification.yml  docker-compose.prod.yml  docker-compose.yml  final_token_analysis.py  frontend-structure-analysis.md  package-lock.json  package.json  pyproject.toml  shadcn-integration-analysis.md  (+4 more)
backend/: .coverage  .coverage.mbabb’s-MacBook-Pro.95162.XdxlNeTx  .dockerignore  .env.build  .ffuzzy  ACTUAL_STATUS.md  ANALYSIS_SUMMARY.md  API_DOCUMENTATION.md  API_REDESIGN_PLAN.md  API_REGENERATION_DESIGN.md  API_TEST_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_FINDINGS_AND_ROADMAP.md  BACKEND_FIXES_SUMMARY.md  BATCH_ENDPOINTS_AUDIT.md  BATCH_SYNTHESIS_PROMPT.md  BEANIE_METADATA_ANALYSIS.md  CACHE_REPAIR_REPORT.md  CACHING_REFACTOR_ANALYSIS.md  CACHING_REFACTOR_PLAN.md  CACHING_SPEC.md  CASCADE_DELETION_IMPLEMENTATION_REPORT.md  CLAUDE.md  CLI_API_ISOMORPHISM_TEST_RESULTS.md  CODEBASE_ANALYSIS_ACTION_PLANS.md  COMPREHENSIVE_ANALYSIS_2025-09-29.md  COMPREHENSIVE_API_AUDIT_REPORT.md  COMPREHENSIVE_FIX_PLAN.md  COMPREHENSIVE_ID_ANALYSIS.md  COMPREHENSIVE_REFACTORING_PLAN.md  COMPREHENSIVE_STATUS_2025-09-29.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  CONNECTOR_SYNTHESIS_ISOMORPHIC_NAMING_PLAN.md  CORPUS_QUERY_COMMANDS.md  CORPUS_REDESIGN.md  CORPUS_RETRIEVAL_FIX_REPORT.md  CURRENT_STATUS_FINAL.md  DEVELOPMENT_CYCLE_1.md  DEVELOPMENT_CYCLE_2.md  DEVELOPMENT_CYCLE_3.md  DEVELOPMENT_CYCLE_4.md  (+157 more)
backend/docs/: AI_PROMPT_ANALYSIS_DEDUPLICATE.md  AI_PROMPT_ANALYSIS_DEFINITIONS_SYNTHESIS.md  AI_PROMPT_ANALYSIS_ETYMOLOGY.md  AI_PROMPT_ANALYSIS_EXAMPLES.md  AI_PROMPT_ANALYSIS_MEANING_EXTRACTION.md  AI_PROMPT_ANALYSIS_PRONUNCIATION.md  AI_PROMPT_ANALYSIS_SYNONYMS.md  AI_SYNTHESIS_PIPELINE_SUMMARY.md  API_REFACTORING_PLAN.md  ARCHITECTURE_SYNTHESIS_SUMMARY.md  ARCHITECTURE_V3_SUMMARY.md  ARCHITECTURE_V4_SUMMARY.md  BACKEND_API_TYPE_SAFETY_REPORT.md  BATCH_IMPLEMENTATION_ISSUES.md  BATCH_SYNTHESIS_ARCHITECTURE.md  BATCH_SYNTHESIS_DESIGN.md  BATCH_SYNTHESIS_IMPLEMENTATION.md  CACHING_ARCHITECTURE_V2.md  CACHING_ARCHITECTURE_V3.md  CACHING_ARCHITECTURE_V4.md  CLI_SPECIFICATION.md  CORPUS_REFACTORING_PLAN.md  FRONTEND_BACKEND_API_MAPPING.md  INLINE_VS_LOCATION_PATTERN_ANALYSIS.md  MYPY_ERROR_BREAKDOWN_2025_07_26.md  MYPY_FINAL_AUDIT_2025_07_26.md  OPTIMIZATION_SUMMARY.md  PYTEST_SEGFAULT_SOLUTIONS.md  REPOSITORY_CONSOLIDATION_PLAN.md  REST_API_MAP.md  REST_API_REFACTORING_PLAN.md  REST_API_REFACTORING_SUMMARY.md  SEARCH_TESTS_ANALYSIS_2025-09-29.md  TESTING_SUITE_SUMMARY.md  ai-synthesis-refactor-plan.md  api-endpoints.md  api-specifications.md  apple_dictionary_integration.md  audio_synthesis.md  backwards_compatibility_changes.md  (+43 more)
backend/docs/api/: REST_API_REFERENCE.md
backend/docs/optimization_reports/: 01_response_object_optimization.md  02_mongodb_connection_optimization.md  03_cache_headers_implementation.md  04_search_engine_initialization_optimization.md
backend/docs/type-checking/: comprehensive-type-audit-2025-08-01-002617.md  comprehensive-type-safety-audit-2025-08-07.md  type-check-report-2025-07-29-comprehensive.md  type-check-report-2025-07-29-post-pipeline-removal.md  type-check-report-2025-07-29.md  wordlist-type-audit-2025-07-31.md
backend/examples/: batch_synthesis_example.py
backend/scripts/: BATCH_SYNTHESIS_README.md  FREQUENCY_ANALYZER_README.md  analyze_corpus_optimization.py  api_server.py  apple_dict_cli.py  audit_synthesis_quality.py  batch_cli.py  batch_synthesis.py  batch_synthesis_enhanced.py  bench_before_after.py  benchmark_performance.py  build_and_save_indices.py  build_and_verify_corpus.py  build_english_corpus.py  build_semantic_index.py  check_db_state.py  check_orphaned_versions.py  check_semantic_index.py  clean_and_rebuild.py  compare_benchmarks.py  corpus_optimization_report.py  corpus_optimization_strategy.py  create_indices.py  example_words.txt  filter_corpus.py  final_connector_test.py  fix_class_ids.py  floridify  force_aggregate.py  frequency_analyzer.py  fuzzing_test_suite.py  generate_test_wordlist.py  inspect_corpus.py  investigate_cli_boot.py  migrate_languages_and_word_links.py  migrate_wordlist_items.py  minimal_test.py  nuclear_rebuild.py  pipeline_comparison.py  process_corpus.py  (+48 more)
backend/src/floridify/: __init__.py  config.py  constants.py
backend/tests/: BACKWARDS_COMPATIBILITY_REPORT.md  README.md  TEST_ORGANIZATION_SUMMARY.md  __init__.py  benchmark_cache.py  benchmark_faiss.py  benchmark_performance.py  benchmark_search_pipeline.py  conftest.py  quick_benchmark.py  run_comprehensive_benchmark.py  test_api_compatibility.py  test_apple_dictionary_batch_extractor.py  test_apple_dictionary_connector.py  test_backwards_compat.py  test_cache_headers.py  test_caching_functionality.py  test_caching_versioning_system.py  test_connector_functionality.py  test_endpoint_audit.py  test_enhanced_metadata.py  test_legendre.py  test_lemmatization_improvements.py  test_models.py  test_models_v2.py  test_new_endpoints.py  test_non_api_connectors.py  test_quantization_caching.py  test_real_connectors_caching.py  test_rest_api_comprehensive.py  test_wordlist_models.py  test_working_suite.py
backend/tests/ai/: conftest.py  test_ai_connector.py  test_embedding_synset_matching.py  test_synthesis_quality_semantic.py  test_synthesizer.py  (+1 more)
backend/validation_results/: corpus_validation_20251001_235112.json
(+1778 files in other folders)
