[project]
name = "floridify"
version = "0.1.0"
description = "AI-Enhanced Dictionary and Learning Tool"
authors = [
    { name = "Mike Babb", email = "mike7400@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "openai>=1.57.0",
    "toml>=0.10.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiofiles>=24.1.0",
    "beanie>=1.26.0",
    "wikitextparser>=0.56.0",
    "genanki>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "rapidfuzz>=3.0.0",
    "pygtrie>=2.5.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.16.1",
    "ruff>=0.8.0",
    "hypothesis>=6.0.0",
    "types-toml>=0.10.8.20240310",
    "types-aiofiles>=24.1.0.20250606",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250529",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-lxml>=2025.3.30",
    "types-pygments>=2.19.0.20250516",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E203"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
