[project]
name = "floridify"
version = "0.1.0"
description = "AI-Enhanced Dictionary and Learning Tool"
authors = [{ name = "Mike Babb", email = "mike7400@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "openai>=1.57.0",
    "toml>=0.10.2",
    "beautifulsoup4>=4.12.0",
    "aiofiles>=24.1.0",
    "beanie>=1.26.0",
    "wikitextparser>=0.56.0",
    "genanki>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    # Modern optimized string matching (Rust-backed)
    "rapidfuzz>=3.0.0",
    "jellyfish>=1.2.0",
    "polyleven>=0.8", # Rust-backed Levenshtein
    "editdistance>=0.8.1", # C++ backed edit distance
    "fuzzywuzzy>=0.18.0", # Used in CLI utils
    # Modern NLP libraries - TEMPORARILY DISABLED FOR LIGHTWEIGHT DEPLOYMENT
    # "spacy>=3.7.0",
    # "spacy-transformers>=1.3.0",
    # "tokenizers>=0.19.0",
    "contractions>=0.1.73",
    # Optimized data structures
    "marisa-trie>=1.2.0", # C++ backed trie
    "dawg-python>=0.7.2", # DAWG (Directed Acyclic Word Graph)
    "pyahocorasick>=2.1.0", # C++ Aho-Corasick automaton
    "xxhash>=3.4.0", # Fast hash functions
    # Scientific computing with optimized backends - TEMPORARILY DISABLED FOR LIGHTWEIGHT DEPLOYMENT
    "numpy>=1.24.0",  # Keep numpy as it's used in many places
    # "scikit-learn>=1.3.0",  # DISABLED - heavy dependency
    # "faiss-cpu>=1.7.4", # DISABLED - semantic search temporarily disabled
    # "sentence-transformers>=3.0.0", # DISABLED - PyTorch dependency
    # "transformers>=4.40.0",  # DISABLED - PyTorch dependency
    # Advanced text processing
    "ftfy>=6.1.0", # Fix text encoding issues
    "jinja2>=3.1.0", # Lightweight templating for prompts
    "loguru>=0.7.0", # Modern logging with colors and formatting
    "regex>=2023.0.0", # More advanced regex engine
    "unicodedata2>=15.0.0", # Fast Unicode normalization
    "coolname>=2.2.0",
    "hishel>=0.1.0", # Modern HTTP caching client
    # REST API framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.13",
    "nltk>=3.9.1",
    # Image processing and scientific computing for Legendre - TEMPORARILY DISABLED
    # "pillow>=10.0.0",  # DISABLED - heavy image processing
    # "scipy>=1.11.0",   # DISABLED - heavy scientific computing
    # "matplotlib>=3.8.0",  # DISABLED - heavy plotting library
    "psutil>=7.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.16.1",
    "ruff>=0.8.0",
    "hypothesis>=6.0.0",
    # API testing
    "httpx>=0.28.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    # Type stubs
    "types-toml>=0.10.8.20240310",
    "types-aiofiles>=24.1.0.20250606",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-lxml>=2025.3.30",
    "types-click>=7.1.8",
    "types-regex>=2024.11.6.20250403",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_calls = false


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E203", "E501"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
