[project]
name = "floridify"
version = "0.1.0"
description = "AI-Enhanced Dictionary and Learning Tool"
authors = [{ name = "Mike Babb", email = "mike7400@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "openai>=1.57.0",
    "toml>=0.10.2",
    "beautifulsoup4>=4.12.0",
    "aiofiles>=24.1.0",
    "beanie>=1.26.0",
    "wikitextparser>=0.56.0",
    "genanki>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    # Modern optimized string matching (Rust-backed)
    "rapidfuzz>=3.0.0",
    "jellyfish>=1.2.0",
    "polyleven>=0.8", # Rust-backed Levenshtein
    "editdistance>=0.8.1", # C++ backed edit distance
    "fuzzywuzzy>=0.18.0", # Used in CLI utils
    # Modern NLP libraries
    "contractions>=0.1.73",
    # Optimized data structures
    "marisa-trie>=1.2.0", # C++ backed trie
    "dawg-python>=0.7.2", # DAWG (Directed Acyclic Word Graph)
    "pyahocorasick>=2.1.0", # C++ Aho-Corasick automaton
    "xxhash>=3.4.0", # Fast hash functions
    # Essential text processing only
    "ftfy>=6.1.0", # Fix text encoding issues
    "jinja2>=3.1.0", # Lightweight templating for prompts
    "loguru>=0.7.0", # Modern logging with colors and formatting
    "regex>=2023.0.0", # More advanced regex engine
    "unicodedata2>=15.0.0", # Fast Unicode normalization
    "coolname>=2.2.0",
    "hishel>=0.1.0", # Modern HTTP caching client
    "google-cloud-texttospeech>=2.16.0", # Google Cloud Text-to-Speech API
    "orjson>=3.10.0", # Fast JSON serialization
    # REST API framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.13",
    "psutil>=7.0.0",
    "nltk>=3.9.1",
    "pillow>=10.0.0", # For image processing in definitions
    # Semantic search dependencies (CPU-only by default)
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    # High-performance caching
    "diskcache>=5.6.3",
    # Compression
    "zstandard>=0.22.0",
    # ONNX optimization for semantic search
    "optimum[onnxruntime]>=1.16.0",
    "python-levenshtein>=0.27.1",
    "pyobjc-framework-coreservices>=11.1",
    "boto3>=1.40.7",
    "botocore>=1.40.7",
    "lz4>=4.4.4",
]

[project.scripts]
floridify = "floridify.cli:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/floridify"]

[tool.hatchling.build]
sources = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.16.1",
    "ruff>=0.8.0",
    "hypothesis>=6.0.0",
    # API testing
    "httpx>=0.28.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    # Type stubs
    "types-toml>=0.10.8.20240310",
    "types-aiofiles>=24.1.0.20250606",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-lxml>=2025.3.30",
    "types-click>=7.1.8",
    "types-regex>=2024.11.6.20250403",
    "types-orjson>=3.6.2",
    "types-xxhash>=3.0.5.2",
    "types-psutil>=7.0.0.20250601",
    "types-editdistance>=0.8.0.20250401",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_calls = false


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "E402"]  # E402: Module level import not at top of file
ignore = ["E203", "E501"]
# Force all imports to be at the top of the file
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Configure import sorting
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
