[project]
name = "floridify"
version = "0.1.0"
description = "AI-Enhanced Dictionary and Learning Tool"
authors = [{ name = "Mike Babb", email = "mike7400@gmail.com" }]
requires-python = ">=3.13,<3.15"

dependencies = [
    "httpx[http2]>=0.28.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "openai>=1.57.0",
    "toml>=0.10.2",
    "beautifulsoup4>=4.12.0",
    "beanie>=1.26.0",
    "wikitextparser>=0.56.0",
    "genanki>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    # Modern optimized string matching (Rust-backed)
    "rapidfuzz>=3.0.0",
    # Modern NLP libraries
    "contractions>=0.1.73",
    # Optimized data structures
    "marisa-trie>=1.2.0", # C++ backed trie
    "xxhash>=3.4.0", # Fast hash functions
    # Essential text processing
    "ftfy>=6.1.0", # Fix text encoding issues
    "jinja2>=3.1.0", # Lightweight templating for prompts
    "loguru>=0.7.0", # Modern logging with colors and formatting
    "coolname>=2.2.0",
    "orjson>=3.10.0", # Fast JSON serialization
    # REST API framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "nltk>=3.9.1",
    "pillow>=10.0.0", # For image processing in definitions
    # Semantic search dependencies (CPU-only by default)
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    # High-performance caching
    "diskcache>=5.6.3",
    # Compression
    "zstandard>=0.22.0",
    "lz4>=4.4.4",
    # AWS/ML deployment
    "boto3>=1.40.7",
    "botocore>=1.40.7",
    # Document parsing
    "pypdf>=4.0.0",        # Modern PDF parsing (fork of PyPDF2)
    "ebooklib>=0.18",      # EPUB parsing
]

[project.optional-dependencies]
# macOS-specific dependencies for Apple Dictionary integration
macos = [
    "pyobjc-framework-coreservices>=11.1",
]

[project.scripts]
floridify = "floridify.cli:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/floridify"]

[tool.hatchling.build]
sources = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.16.1",
    "ruff>=0.8.0",
    "hypothesis>=6.0.0",
    # API testing
    "httpx>=0.28.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    # Type stubs for packages in use
    "types-toml>=0.10.8.20240310",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-lxml>=2025.3.30",
    "types-click>=7.1.8",
    "types-orjson>=3.6.2",
    "types-xxhash>=3.0.5.2",
    "types-boto3>=1.40.11",
    "boto3-stubs>=1.40.11",
    "types-pillow>=10.2.0.20240822",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "floridify.wotd.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Third-party packages without type stubs
module = [
    "ebooklib.*",
    "coolname.*",
    "faiss.*",
    "marisa_trie.*",
    "google.cloud.*",
    "google.oauth2.*",
    "CoreServices.*",
]
ignore_missing_imports = true


[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "E402"]  # E402: Module level import not at top of file
ignore = ["E203", "E501"]
# Force all imports to be at the top of the file
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Configure import sorting
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
